[package]
name = "emoji-quickpick"
version = "1.0.0"
authors = ["Andrew Cann <shum@canndrew.org>"]
description = "emoji picking tool for Linux"
repository = "https://github.com/canndrew/emoji-quickpick"
license = "GPL-2.0-or-later"
readme = "README.md"
edition = "2018"

[dependencies]
gtk = { version = "0.6.0", features = ["v3_16"] }
gio = "0.6.0"
gdk = "0.10.0"
sublime_fuzzy = "0.6.0"
clap = "2.33.0"
libxdo-sys = "0.11.0"

